Update credits_everything description to match Momence

--- a/demo/expand health/v2/views/attendance-rules.html
+++ b/demo/expand health/v2/views/attendance-rules.html
@@ -1298,7 +1298,7 @@
     const descriptions = {
       no_credits: 'Customers can cancel their attendance but get no automatic credit. They need to contact me/us directly if they want to claim the credit and I/we can then decide to do so in their customer profile.',
       credits_packs: 'Customers can cancel their attendance but get a credit only for tickets purchased using pre-paid/class packages or usage-limited subscriptions and only if they make it before the cancellation cut-off period. In that case, the ticket will be automatically added back to their package or usage limit. Other purchases are not credited automatically, but you can always credit them in their customer profile.',
-      credits_everything: 'Customers can cancel their attendance and get a credit if they make it before the cancellation cut-off time, regardless of purchase type.'
+      credits_everything: 'Customers can cancel their attendance and get a credit if they make it before the cancellation cut-off period. Tickets purchased using pre-paid/class packages or usage-limited subscriptions will be automatically added back to their package or usage limit. Other purchases will be returned as credits to the customer\'s account.'
     };
 
     // Credit type toggle for both tabs
