Add Weeks and Minutes options to cancellation period dropdowns

--- a/demo/expand health/v2/views/attendance-rules.html
+++ b/demo/expand health/v2/views/attendance-rules.html
@@ -960,8 +960,10 @@
               <div class="cutoff-row">
                 <input type="number" class="cutoff-input" value="0" min="0" id="classesCutoffValue">
                 <select class="cutoff-select" id="classesCutoffUnit">
-                  <option value="hours">Hours</option>
+                  <option value="weeks">Weeks</option>
                   <option value="days">Days</option>
+                  <option value="hours" selected>Hours</option>
+                  <option value="minutes">Minutes</option>
                 </select>
                 <span class="cutoff-text">before class starts</span>
               </div>
@@ -984,8 +986,10 @@
                 <span class="period-label">Late cancel period:</span>
                 <input type="number" class="period-input" value="24" min="1" id="lateCancelPeriodClasses">
                 <select class="period-select" id="lateCancelUnitClasses">
-                  <option value="hours">Hours</option>
+                  <option value="weeks">Weeks</option>
                   <option value="days">Days</option>
+                  <option value="hours" selected>Hours</option>
+                  <option value="minutes">Minutes</option>
                 </select>
                 <span class="period-label">before class start</span>
               </div>
@@ -1053,8 +1057,10 @@
               <div class="cutoff-row">
                 <input type="number" class="cutoff-input" value="0" min="0" id="appointmentsCutoffValue">
                 <select class="cutoff-select" id="appointmentsCutoffUnit">
-                  <option value="hours">Hours</option>
+                  <option value="weeks">Weeks</option>
                   <option value="days">Days</option>
+                  <option value="hours" selected>Hours</option>
+                  <option value="minutes">Minutes</option>
                 </select>
                 <span class="cutoff-text">before appointment starts</span>
               </div>
@@ -1077,8 +1083,10 @@
                 <span class="period-label">Late cancel period:</span>
                 <input type="number" class="period-input" value="24" min="1" id="lateCancelPeriodAppointments">
                 <select class="period-select" id="lateCancelUnitAppointments">
-                  <option value="hours">Hours</option>
+                  <option value="weeks">Weeks</option>
                   <option value="days">Days</option>
+                  <option value="hours" selected>Hours</option>
+                  <option value="minutes">Minutes</option>
                 </select>
                 <span class="period-label">before appointment start</span>
               </div>
