Add alert debug for appointment click

--- a/demo/expand health/v2/views/appointments.html
+++ b/demo/expand health/v2/views/appointments.html
@@ -2724,6 +2724,7 @@
     let isCheckedIn = false;
 
     function openAppointmentPanel(apt) {
+      alert('Opening panel for appointment: ' + (apt.title || apt.id));
       try {
         console.log('openAppointmentPanel called with:', apt);
         selectedAppointment = apt;
